--- a/index.html
+++ b/index.html
@@ -2,27 +2,131 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Madhamster + Grok Moonshot Option Ladder v1.0004</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Madhamster + Grok Moonshot Option Ladder v1.0005</title>
   <style>
-    body { font-family: Arial, sans-serif; max-width: 1050px; margin: 30px auto; padding: 20px; background: #0d1117; color: #c9d1d9; }
-    h1 { text-align: center; color: #58a6ff; text-shadow: 0 0 10px #58a6ff; margin-bottom: 20px; font-size: 2.2em; }
-    label { display: block; margin: 15px 0 5px; font-weight: bold; color: #e6edf3; }
-    input { width: 100%; padding: 10px; font-size: 16px; box-sizing: border-box; background: #21262d; color: #c9d1d9; border: 1px solid #30363d; border-radius: 6px; }
-    button { width: 100%; padding: 14px; background: linear-gradient(90deg, #238636, #2ea043); color: white; border: none; font-size: 18px; font-weight: bold; cursor: pointer; margin: 25px 0 15px; border-radius: 6px; box-shadow: 0 4px 12px rgba(46,160,67,0.4); transition: all 0.2s; }
-    button:hover { transform: translateY(-2px); box-shadow: 0 6px 16px rgba(46,160,67,0.6); }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; font-size: 0.92em; background: #161b22; border-radius: 8px; overflow: hidden; }
-    th, td { padding: 9px; text-align: left; border-bottom: 1px solid #30363d; }
-    th { background: #21262d; color: #58a6ff; font-weight: bold; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 15px;
+      background: #0d1117;
+      color: #c9d1d9;
+      min-height: 100vh;
+      box-sizing: border-box;
+    }
+    h1 {
+      text-align: center;
+      color: #58a6ff;
+      text-shadow: 0 0 10px #58a6ff;
+      margin: 20px 0 25px;
+      font-size: clamp(1.6rem, 5vw, 2.2rem);
+    }
+    label {
+      display: block;
+      margin: 12px 0 6px;
+      font-weight: bold;
+      color: #e6edf3;
+      font-size: 1.05rem;
+    }
+    input {
+      width: 100%;
+      padding: 12px;
+      font-size: 1.1rem;
+      box-sizing: border-box;
+      background: #21262d;
+      color: #c9d1d9;
+      border: 1px solid #30363d;
+      border-radius: 6px;
+      margin-bottom: 8px;
+    }
+    button {
+      width: 100%;
+      padding: 16px;
+      background: linear-gradient(90deg, #238636, #2ea043);
+      color: white;
+      border: none;
+      font-size: 1.2rem;
+      font-weight: bold;
+      cursor: pointer;
+      margin: 20px 0 15px;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(46,160,67,0.4);
+      transition: all 0.2s;
+    }
+    button:hover, button:active {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(46,160,67,0.6);
+    }
+    #costDisplay {
+      margin: 15px 0;
+      font-weight: bold;
+      text-align: center;
+      font-size: 1.15rem;
+    }
+    .table-container {
+      overflow-x: auto;
+      border: 1px solid #30363d;
+      border-radius: 8px;
+      margin: 15px 0;
+      background: #161b22;
+    }
+    table {
+      width: 100%;
+      min-width: 900px; /* forces horizontal scroll on small screens */
+      border-collapse: collapse;
+      font-size: 0.92rem;
+    }
+    th, td {
+      padding: 10px 12px;
+      text-align: left;
+      border-bottom: 1px solid #30363d;
+    }
+    th {
+      background: #21262d;
+      color: #58a6ff;
+      font-weight: bold;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+    }
+    tr:hover {
+      background: #1f2937;
+    }
     .profit { color: #56d364; font-weight: bold; }
     .cash { color: #79c0ff; font-weight: bold; }
     .risk { color: #f85149; font-weight: bold; }
     .neutral { color: #8b949e; font-weight: bold; }
-    .total { font-size: 1.1em; font-weight: bold; background: #21262d; padding: 14px; margin-top: 15px; text-align: center; border-radius: 8px; border: 1px solid #30363d; }
-    .riskreward { background: #161b22; padding: 16px; margin-top: 15px; border-radius: 8px; border: 1px solid #30363d; text-align: center; font-size: 1.05em; }
+    .total {
+      font-size: 1.1rem;
+      font-weight: bold;
+      background: #21262d;
+      padding: 14px;
+      margin: 15px 0;
+      text-align: center;
+      border-radius: 8px;
+      border: 1px solid #30363d;
+    }
+    .riskreward {
+      background: #161b22;
+      padding: 16px;
+      margin-top: 15px;
+      border-radius: 8px;
+      border: 1px solid #30363d;
+      text-align: center;
+      font-size: 1.05rem;
+      line-height: 1.5;
+    }
+    @media (max-width: 768px) {
+      body { padding: 10px; }
+      h1 { margin: 15px 0; }
+      button { padding: 18px; font-size: 1.3rem; }
+      .table-container { margin: 10px -10px; border-radius: 0; }
+      th, td { padding: 8px 10px; font-size: 0.88rem; }
+    }
   </style>
 </head>
 <body>
-  <h1>Madhamster + Grok Moonshot Option Ladder v1.0004</h1>
+  <h1>Madhamster + Grok Moonshot Option Ladder v1.0005</h1>
   
   <label for="buyPrice">Buy Price per contract (e.g. 0.76):</label>
   <input type="number" id="buyPrice" step="0.01" min="0" placeholder="Entry price" value="0.76">
@@ -32,24 +136,26 @@
 
   <button onclick="calculate()">Launch Moon Ladder</button>
 
-  <div id="costDisplay" style="margin: 15px 0; font-weight: bold; text-align: center; font-size: 1.1em;"></div>
+  <div id="costDisplay"></div>
 
-  <table id="results">
-    <thead>
-      <tr>
-        <th>Target Gain</th>
-        <th>Option Price</th>
-        <th>% of Original</th>
-        <th>Contracts Sold</th>
-        <th>Remaining</th>
-        <th>Cash Out this Sell</th>
-        <th>Profit this Sell</th>
-        <th>Max Potential Loss/Gain</th>
-        <th>Cum. Profit %</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <div class="table-container">
+    <table id="results">
+      <thead>
+        <tr>
+          <th>Target Gain</th>
+          <th>Option Price</th>
+          <th>% of Original</th>
+          <th>Sold</th>
+          <th>Rem.</th>
+          <th>Cash Out</th>
+          <th>Profit</th>
+          <th>Max Loss/Gain</th>
+          <th>Cum. %</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
   <div id="totalProfit" class="total"></div>
   <div id="totalCashOut" class="total" style="background:#21262d; margin-top:10px;"></div>
@@ -76,7 +182,7 @@
       const costPerContract = buy * 100;
       const totalCost = initialContracts * costPerContract;
       document.getElementById('costDisplay').innerHTML = 
-        `Total Cost of Position: <span class="risk">$${formatNumber(totalCost)}</span>`;
+        `Total Cost: <span class="risk">$${formatNumber(totalCost)}</span>`;
 
       const tiers = [
         { gain: 100,    pctOrig: 50 },
@@ -146,12 +252,12 @@
         `Total Profit Locked: <span class="profit">$${formatNumber(totalProfitLocked)}</span> (${securedPct}% of cost)`;
 
       document.getElementById('totalCashOut').innerHTML = 
-        `Total Cash Out (gross received): <span class="cash">$${formatNumber(cumulativeCashOut)}</span>`;
+        `Total Cash Out: <span class="cash">$${formatNumber(cumulativeCashOut)}</span>`;
 
-      let rrText = `If remaining expires worthless tomorrow → net position would be <span class="${getValueClass(totalProfitLocked - (remaining * costPerContract))}">$${formatNumber(Math.abs(totalProfitLocked - (remaining * costPerContract)))}${totalProfitLocked - (remaining * costPerContract) >= 0 ? '' : '-'}</span><br>`;
-      rrText += `But you've already secured ${securedPct}% → effective downside now ~${riskLeft}% of original risk.<br>`;
+      let rrText = `If remaining expires worthless tomorrow → net position: <span class="${getValueClass(totalProfitLocked - (remaining * costPerContract))}">$${formatNumber(Math.abs(totalProfitLocked - (remaining * costPerContract)))}${totalProfitLocked - (remaining * costPerContract) >= 0 ? '' : '-'}</span><br>`;
+      rrText += `Secured: ${securedPct}% → downside now ~${riskLeft}% of original risk.<br>`;
       rrText += remaining > 0 
-        ? `Remaining ${remaining} trophy contracts could add ~$${formatNumber(unrealizedTop)} at +20,000% (ride it to the stars!)`
+        ? `Trophy contracts left: ${remaining} — could add ~$${formatNumber(unrealizedTop)} at +20,000%`
         : `All sold — position closed.`;
 
       document.getElementById('riskReward').innerHTML = rrText;
