Add Quick Cash-Out feature to index.html
Added a Quick Cash-Out section to calculate how many contracts to sell to recover the original total cost based on the current live option price.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Madhamster + Grok Moonshot Option Ladder v1.0005</title>
+  <title>Madhamster + Grok Moonshot Option Ladder v1.0006</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -72,7 +72,7 @@
     }
     table {
       width: 100%;
-      min-width: 900px; /* forces horizontal scroll on small screens */
+      min-width: 900px;
       border-collapse: collapse;
       font-size: 0.92rem;
     }
@@ -116,6 +116,36 @@
       font-size: 1.05rem;
       line-height: 1.5;
     }
+    /* ── Quick Cash-Out Section ── */
+    #quickCashOut {
+      background: #161b22;
+      border: 1px solid #30363d;
+      border-radius: 8px;
+      padding: 20px;
+      margin-top: 40px;
+    }
+    #quickCashOut h2 {
+      margin-top: 0;
+      color: #58a6ff;
+      text-align: center;
+      font-size: 1.4rem;
+    }
+    #quickCashOut p.intro {
+      text-align: center;
+      color: #8b949e;
+      margin: 0 0 20px;
+    }
+    #cashoutResult {
+      margin-top: 20px;
+      padding: 15px;
+      background: #0d1117;
+      border-radius: 6px;
+      border: 1px solid #30363d;
+      font-size: 1.1rem;
+      line-height: 1.6;
+    }
+    #cashoutResult .good { color: #56d364; }
+    #cashoutResult .warn { color: #f85149; }
     @media (max-width: 768px) {
       body { padding: 10px; }
       h1 { margin: 15px 0; }
@@ -126,18 +156,14 @@
   </style>
 </head>
 <body>
-  <h1>Madhamster + Grok Moonshot Option Ladder v1.0005</h1>
-  
+  <h1>Madhamster + Grok Moonshot Option Ladder v1.0006</h1>
+ 
   <label for="buyPrice">Buy Price per contract (e.g. 0.76):</label>
   <input type="number" id="buyPrice" step="0.01" min="0" placeholder="Entry price" value="0.76">
-
   <label for="numContracts">Number of Contracts (min 1):</label>
   <input type="number" id="numContracts" min="1" placeholder="e.g. 30" value="30">
-
   <button onclick="calculate()">Launch Moon Ladder</button>
-
   <div id="costDisplay"></div>
-
   <div class="table-container">
     <table id="results">
       <thead>
@@ -156,16 +182,27 @@
       <tbody></tbody>
     </table>
   </div>
-
   <div id="totalProfit" class="total"></div>
   <div id="totalCashOut" class="total" style="background:#21262d; margin-top:10px;"></div>
   <div id="riskReward" class="riskreward"></div>
+
+  <!-- New Quick Cash-Out Section at the bottom -->
+  <div id="quickCashOut">
+    <h2>Quick: Get Your Total Cost Back</h2>
+    <p class="intro">Enter current live option price → see how many contracts to sell to recover ≈ your original total cost.</p>
+    
+    <label for="livePrice">Current Live Option Price:</label>
+    <input type="number" id="livePrice" step="0.01" min="0" placeholder="e.g. 2.45">
+
+    <button onclick="calculateQuickCashOut()">Calculate Sell Qty</button>
+
+    <div id="cashoutResult"></div>
+  </div>
 
   <script>
     function formatNumber(num) {
       return num.toFixed(0).replace(/\B(?=(\d{3})+(?!\d))/g, ",");
     }
-
     function getValueClass(value) {
       if (value > 0) return 'profit';
       if (value < 0) return 'risk';
@@ -175,26 +212,24 @@
     function calculate() {
       const buy = parseFloat(document.getElementById('buyPrice').value);
       let initialContracts = parseInt(document.getElementById('numContracts').value);
-
       if (!buy || buy <= 0) { alert("Enter valid buy price!"); return; }
       if (!initialContracts || initialContracts < 1) { alert("Contracts must be at least 1!"); return; }
-
       const costPerContract = buy * 100;
       const totalCost = initialContracts * costPerContract;
-      document.getElementById('costDisplay').innerHTML = 
+      document.getElementById('costDisplay').innerHTML =
         `Total Cost: <span class="risk">$${formatNumber(totalCost)}</span>`;
 
       const tiers = [
-        { gain: 100,    pctOrig: 50 },
-        { gain: 200,    pctOrig: 8  },
-        { gain: 400,    pctOrig: 8  },
-        { gain: 800,    pctOrig: 10 },
-        { gain: 1500,   pctOrig: 10 },
-        { gain: 3000,   pctOrig: 4  },
-        { gain: 6000,   pctOrig: 3  },
-        { gain: 8000,   pctOrig: 2  },
-        { gain: 10000,  pctOrig: 1.5},
-        { gain: 20000,  pctOrig: 1  }
+        { gain: 100,  pctOrig: 50 },
+        { gain: 200,  pctOrig: 8 },
+        { gain: 400,  pctOrig: 8 },
+        { gain: 800,  pctOrig: 10 },
+        { gain: 1500, pctOrig: 10 },
+        { gain: 3000, pctOrig: 4 },
+        { gain: 6000, pctOrig: 3 },
+        { gain: 8000, pctOrig: 2 },
+        { gain: 10000, pctOrig: 1.5},
+        { gain: 20000, pctOrig: 1 }
       ];
 
       let remaining = initialContracts;
@@ -208,11 +243,7 @@
         const sellFraction = tier.pctOrig / 100;
         let calcSell = initialContracts * sellFraction;
         let toSell = Math.floor(calcSell);
-
-        if (toSell < 1 && remaining > 0) {
-          toSell = 1;
-        }
-
+        if (toSell < 1 && remaining > 0) toSell = 1;
         toSell = Math.min(toSell, remaining);
 
         const cashThisSell = toSell * targetPrice * 100;
@@ -222,7 +253,6 @@
 
         const remainingAfter = remaining - toSell;
         const maxPotentialLossGain = totalProfitLocked - (remainingAfter * costPerContract);
-
         remaining = remainingAfter;
 
         const cumProfitPct = totalCost > 0 ? (totalProfitLocked / totalCost * 100).toFixed(1) : 0;
@@ -248,19 +278,55 @@
       const securedPct = (totalProfitLocked / totalCost * 100).toFixed(1);
       const riskLeft = ((maxLoss - totalProfitLocked) / maxLoss * 100).toFixed(0);
 
-      document.getElementById('totalProfit').innerHTML = 
+      document.getElementById('totalProfit').innerHTML =
         `Total Profit Locked: <span class="profit">$${formatNumber(totalProfitLocked)}</span> (${securedPct}% of cost)`;
-
-      document.getElementById('totalCashOut').innerHTML = 
+      document.getElementById('totalCashOut').innerHTML =
         `Total Cash Out: <span class="cash">$${formatNumber(cumulativeCashOut)}</span>`;
 
       let rrText = `If remaining expires worthless tomorrow → net position: <span class="${getValueClass(totalProfitLocked - (remaining * costPerContract))}">$${formatNumber(Math.abs(totalProfitLocked - (remaining * costPerContract)))}${totalProfitLocked - (remaining * costPerContract) >= 0 ? '' : '-'}</span><br>`;
       rrText += `Secured: ${securedPct}% → downside now ~${riskLeft}% of original risk.<br>`;
-      rrText += remaining > 0 
+      rrText += remaining > 0
         ? `Trophy contracts left: ${remaining} — could add ~$${formatNumber(unrealizedTop)} at +20,000%`
         : `All sold — position closed.`;
-
       document.getElementById('riskReward').innerHTML = rrText;
+    }
+
+    function calculateQuickCashOut() {
+      const buy = parseFloat(document.getElementById('buyPrice').value);
+      const contracts = parseInt(document.getElementById('numContracts').value);
+      const live = parseFloat(document.getElementById('livePrice').value);
+      const resultDiv = document.getElementById('cashoutResult');
+
+      resultDiv.innerHTML = '';
+
+      if (isNaN(buy) || isNaN(contracts) || isNaN(live) || buy <= 0 || contracts < 1 || live <= 0) {
+        resultDiv.innerHTML = '<span class="warn">Please fill buy price, contracts, and a valid live price > 0.</span>';
+        return;
+      }
+
+      const totalCost = buy * contracts * 100;
+      if (live <= buy) {
+        resultDiv.innerHTML = '<span class="warn">Live price ≤ buy price — no recovery possible yet.</span>';
+        return;
+      }
+
+      const gainPerContract = (live - buy) * 100;
+      const exactContracts = totalCost / gainPerContract;
+      const rounded = Math.round(exactContracts * 10) / 10; // 0.1 precision
+
+      let cashBack = Math.round(rounded * gainPerContract);
+      let msg = `Sell <strong>${rounded}</strong> contracts → get ≈ <span class="cash">$${formatNumber(cashBack)}</span> cash<br>`;
+      msg += `(exact: ${exactContracts.toFixed(3)} contracts)<br><br>`;
+
+      msg += `This recovers ≈ your total cost of $${formatNumber(totalCost)}<br>`;
+      msg += `Leaves <strong>${contracts - Math.floor(rounded)}</strong>–<strong>${contracts - Math.ceil(rounded) + 1}</strong> contracts riding free.`;
+
+      if (rounded > contracts) {
+        const maxCash = Math.round(contracts * gainPerContract);
+        msg += '<br><br><span class="warn">Not enough contracts — sell all for only $' + formatNumber(maxCash) + ' (partial recovery)</span>';
+      }
+
+      resultDiv.innerHTML = msg;
     }
   </script>
 </body>
